# hic_unfold

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/: step03.pt  step04_encoder.pt  step05_diffusion_real.pt  step05_encoder_N65.pt  step06_forward_params.npz  step07_maxent.npz  step08_guided.npz  step10_realhic.npz  step11_ablated_no_z.pt  step11_ablation_results.npz  step12_generalization.npz  step13_sensitivity.npz  step15_cohesin_validation.npz  step16_k562_generalization.npz  step17_partial_z_sweep.npz  step18_encoder_finetuned.pt  step19_diversity.npz  step20_tad.npz  step21_rad21_overlay.npz  step22_full_stats.npz  step23_naive_baseline.npz  step24_landmarks.npz  step25_failure_modes.npz  step26_atac_overlay.npz  step27_null_models_enrichment.npz  step28_distance_matched.npz  step29_perturb_controls.npz  step30_convergent_ctcf.npz  step31_tad_stats.npz  step32_imputation.npz  step33_multi_locus.npz  step34_cv_5fold.npz
scripts/: 01_verify_simulator.py  02_verify_polymer.py  03_inspect_bintu.py  04_overfit_test.py  05_generate_dataset.py  06_train_simulated.py  07_eval_simulated.py  08_train_encoder.py  09_eval_encoder.py  10_generate_dataset_N65.py  11_train_encoder_N65.py  12_encode_real_data.py  13_train_real.py  14_eval_real.py  15_calibrate_forward.py  16_maxent_reweight.py  17_guided_sampling.py  18_explainability.py  19_real_hic_deconvolution.py  20_ctcf_chipseq_overlay.py  21_train_real_no_z.py  22_ablation_guided_sampling.py  23_generalization_chr21_18_20.py  24_sensitivity_sweep.py  25_hipps_dimes_baseline.py  29_encoder_finetune.py  (+23 more)
(+27 files in other folders)
